# vigil

./: Cargo.toml  README.md  renovate.json  setup.sh
.github/: renovate-preset.json
.github/workflows/: ci.yml  release.yml
crates/vigil-cli/: Cargo.toml
crates/vigil-cli/src/: main.rs
crates/vigil-common/: Cargo.toml
crates/vigil-core/: Cargo.toml
crates/vigil-events/: Cargo.toml
crates/vigil-events/src/: lib.rs
crates/vigil-rules/: Cargo.toml
