[package]
name = "vigil-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local dependencies
vigil-common = { path = "../vigil-common" }

# Async runtime and utilities
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
